portfolio: fixed div scaling

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/devicons/1.8.0/css/devicons.min.css">
-    <title>CAM SLUPEIKS</title>
+    <title>cam slupeiks</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
